--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_scaffold">ScaffoldActivity</string>
     <string name="title_activity_state_recovery_list_saver">StateRecoveryListSaverActivity</string>
+    <string name="title_activity_main_theme">MainActivityTheme</string>
+
+    <string name="app_title">JetpackComposingTheming</string>
+    <string name="top">Top Story</string>
+    <string name="popular">Popular</string>
+    <string name="read_time">%1$d min read</string>
+    <string name="title_activity_main_free_drag">MainActivityFreeDrag</string>
 </resources>
